Fix a bug with predicate filtering